oining from different phones
